--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   --white-bg: #FBFBFB;
   background: url('../src/assets/background.svg');
   font-size:62.5%;
+  body {
+    margin: 0;
+    padding: 0;
+    /* position:fixed; */
+  }
   
   /* bowlby-one-regular - latin */
   @font-face {
